# Roast-Lab-AI

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .release-it.json  README.md  docker-compose.yml
.agents/: AGENTS.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: backend-ci.yml  code-quality.yml  docker-build.yml  frontend-ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/application/dto/: base.py
backend/app/infrastructure/database/: session.py
backend/app/infrastructure/ollama/: client.py
backend/app/infrastructure/qdrant/: client.py
backend/app/infrastructure/redis/: client.py
backend/app/observability/: logging.py
backend/app/presentation/api/: dependencies.py
backend/app/presentation/api/v1/: health.py  router.py
backend/app/presentation/middleware/: exceptions.py
backend/app/shared/: config.py  response.py
backend/src/: main.py
backend/src/application/dto/: base.py
backend/src/domain/exceptions/: base.py
backend/src/infrastructure/database/: session.py
backend/src/infrastructure/ollama/: client.py
backend/src/infrastructure/qdrant/: client.py
backend/src/infrastructure/redis/: client.py
backend/src/observability/: logging.py
backend/src/presentation/api/: dependencies.py
backend/src/presentation/api/v1/: health.py  router.py
backend/src/presentation/middleware/: exceptions.py  logging.py
backend/src/shared/: response.py
docs/: ARCHITECTURE.md  TECHNICAL_DESIGN.md
frontend/: Dockerfile  index.html  next.config.ts  package.json  prettier.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  middleware.ts
frontend/src/app/: App.tsx
frontend/src/pages/dashboard/ui/: DashboardPage.tsx
frontend/src/pages/not-found/ui/: NotFoundPage.tsx
infrastructure/: README.md
