[tool.poetry]
name = "roastlab-backend"
version = "0.1.0"
description = "Backend for RoastLab AI"
authors = ["RoastLab Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
llama-index = "^0.9.36"
qdrant-client = "^1.7.1"
spacy = "^3.7.2"
transformers = "^4.37.0"
tree-sitter = "^0.20.4"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.1.14"
bandit = "^1.7.6"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "A", "C4", "SIM", "ARG"]
ignore = []

[tool.black]
line-length = 88
target-version = ['py312']
