[project]
name = "roastlab-backend"
version = "0.1.0"
description = "Backend for RoastLab AI"
authors = [
    { name = "RoastLab Team" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "redis>=5.0.1",
    "qdrant-client>=1.7.0",
    "llama-index>=0.9.39",
    "structlog>=24.1.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.14",
    "black>=23.12.1",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "bandit>=1.7.7"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "A", "C4", "SIM", "ARG"]
ignore = []

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Header", "fastapi.Cookie", "fastapi.Body", "fastapi.Security"]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true
explicit_package_bases = true
